--- a/style.css
+++ b/style.css
@@ -1,126 +1,133 @@
+
+
 body {
-  font-family: 'Comfortaa', cursive;
-	background: #B24592;  /* fallback for old browsers */
-	background: -webkit-linear-gradient(to right, #F15F79, #B24592);  /* Chrome 10-25, Safari 5.1-6 */
-	background: linear-gradient(to right, #F15F79, #B24592); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+	font-family: 'Comfortaa', cursive;
+	background: #28a745; /* fallback for old browsers */
+	background: -webkit-linear-gradient(to right, #28a745, #004c11); /* Chrome 10-25, Safari 5.1-6 */
+	background: linear-gradient(to right, #28a745, #004c11); /* Modern browsers */
 }
+
 h1.major,
 h2.major,
 h3.major,
 h4.major,
 h5.major,
 h6.major {
-  padding-bottom: 1em;
-  border-bottom: solid 2px rgba(255, 255, 255, 0.125);
-  margin-bottom: 20px;
+	padding-bottom: 1em;
+	border-bottom: solid 2px rgba(255, 255, 255, 0.125);
+	margin-bottom: 20px;
 }
+
 a {
-  color: #33A9B7;
+	color: #28a745;
 }
-#typer-size{
+
+#typer-size {
 	font-size: 40px;
 }
+
 a:hover,
 a:focus {
-  color: #00E4FF;
-  text-decoration: none;
+	color: #1e7e34;
+	text-decoration: none;
 }
+
 header {
-  display: table;
-  position: relative;
-  width: 100%;
-  height: 100vh;
-  color: white;
-}
-header #particles {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-}
-header .vert-text {
-  display: table-cell;
-  position: relative;
-  vertical-align: middle;
-  text-align: center;
-}
-header .vert-text h1 {
-  padding: 0;
-  margin: 0;
-  font-size: 4.5em;
-  font-weight: 700;
-}
-header .vert-text .scroll-down {
-  display: block;
-  position: absolute;
-  bottom: 12%;
-  left: 50%;
-  color: #fff;
-  -webkit-transform: translate(0, -50%);
-  transform: translate(0, -50%);
-  -webkit-transition: opacity 0.5s;
-  -o-transition: opacity 0.5s;
-  transition: opacity 0.5s;
-}
-header .vert-text .scroll-down:hover {
-  opacity: 0.5;
-}
-header .vert-text .scroll-down::after {
-  position: absolute;
-  content: '';
-  width: 16px;
-  height: 16px;
-  margin: -12px 0 0 -8px;
-  border-left: 1px solid #fff;
-  border-bottom: 1px solid #fff;
-  -webkit-transform: rotate(-45deg);
-  transform: rotate(-45deg);
-  box-sizing: border-box;
-}
-header .vert-text .scroll-down::before {
-  position: absolute;
-  top: -22px;
-  left: -22px;
-  z-index: -1;
-  content: '';
-  width: 44px;
-  height: 44px;
-  box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.1);
-  border-radius: 100%;
-  opacity: 0;
-  -webkit-animation: sdb 3s infinite;
-  animation: sdb 3s infinite;
-  box-sizing: border-box;
+	display: table;
+	position: relative;
+	width: 100%;
+	height: 100vh;
+	color: white;
 }
 
+	header #particles {
+		position: absolute;
+		width: 100%;
+		height: 100%;
+		top: 0;
+		left: 0;
+	}
 
+	header .vert-text {
+		display: table-cell;
+		position: relative;
+		vertical-align: middle;
+		text-align: center;
+	}
+
+		header .vert-text h1 {
+			padding: 0;
+			margin: 0;
+			font-size: 4.5em;
+			font-weight: 700;
+		}
+
+		header .vert-text .scroll-down {
+			display: block;
+			position: absolute;
+			bottom: 12%;
+			left: 50%;
+			color: #fff;
+			transform: translate(0, -50%);
+			transition: opacity 0.5s;
+		}
+
+			header .vert-text .scroll-down:hover {
+				opacity: 0.5;
+			}
+
+			header .vert-text .scroll-down::after {
+				position: absolute;
+				content: '';
+				width: 16px;
+				height: 16px;
+				margin: -12px 0 0 -8px;
+				border-left: 1px solid #fff;
+				border-bottom: 1px solid #fff;
+				transform: rotate(-45deg);
+				box-sizing: border-box;
+			}
+
+			header .vert-text .scroll-down::before {
+				position: absolute;
+				top: -22px;
+				left: -22px;
+				z-index: -1;
+				content: '';
+				width: 44px;
+				height: 44px;
+				box-shadow: 0 0 0 0 rgba(255, 255, 255, 0.1);
+				border-radius: 100%;
+				opacity: 0;
+				animation: sdb 3s infinite;
+				box-sizing: border-box;
+			}
 
 #contacts {
 	margin: 0 auto;
-  padding: 100px 0;
+	padding: 100px 0;
 	background: #224;
 	width: 100%;
-  color: #fff;
+	color: #fff;
 	transition: all 1.7s ease;
 }
-#contacts:hover{
-	background: #fa3380;
-	color: #fff;
-}
-#contacts .social {
-  padding-bottom: 20px;
-  border-bottom: solid 2px rgba(255, 255, 255, 0.125);
-}
 
+	#contacts:hover {
+		background: #28a745;
+		color: #fff;
+	}
 
+	#contacts .social {
+		padding-bottom: 20px;
+		border-bottom: solid 2px rgba(255, 255, 255, 0.125);
+	}
 
-form{
+form {
 	margin-top: 70px;
 	width: 100%;
 }
 
-input[type=text]{
+input[type=text] {
 	margin-top: 20px;
 	width: 390px;
 	height: 55px;
@@ -131,45 +138,42 @@ input[type=text]{
 	border: 1px solid #fff;
 	transition: all 0.3s ease;
 }
-input[type=text]:focus{
-	background: rgba(102,51,153, 0.3);
+
+	input[type=text]:focus {
+		background: rgba(40, 167, 69, 0.3);
+		color: #fff;
+		border: 1px solid #28a745;
+	}
+
+::placeholder {
 	color: #fff;
-	border: 1px solid violet;
 }
-::placeholder{
-	color: #fff;
-}
-.Gaurav{
+
+.Gaurav {
 	margin-top: -70px;
 }
+
 hr.style17 {
-	border-top: 1px solid pink;
+	border-top: 1px solid lightgreen;
 	text-align: center;
 	width: 250px;
 	margin-top: 10px;
 }
-hr.style17:after{
-	border-top: 1px solid pink;
-	border-right: 1px solid pink;
-	border-bottom: 1px solid pink;
-	border-left: 1px solid pink;
-}
-hr.style17:after {
-	content: '§';
-	display: inline-block;
-	position: relative;
-	top: -10px;
-	padding: 0 10px;
-	background: #fa3380;
-	color: #fff;
-	font-size: 18px;
-	-webkit-transform: rotate(60deg);
-	-moz-transform: rotate(60deg);
-	transform: rotate(60deg);
-}
 
+	hr.style17:after {
+		content: '§';
+		display: inline-block;
+		position: relative;
+		top: -10px;
+		padding: 0 10px;
+		background: #28a745;
+		color: #fff;
+		font-size: 18px;
+		transform: rotate(60deg);
+		border: 1px solid lightgreen;
+	}
 
-button{
+button {
 	border-radius: 100px;
 	color: #fff;
 	margin-top: 20px;
@@ -179,67 +183,199 @@ button{
 	width: 200px;
 	text-align: center;
 	outline: none;
-	background: #fa3380;
+	background: #28a745;
 	border: 1px solid #eee;
 	box-shadow: 8px 10px 20px 0px rgba(46,61,73,0.15);
 	transition: all 0.3s ease;
 }
-button:hover{
-background: purple;
-}
 
-.p-img{
+	button:hover {
+		background: #1e7e34;
+	}
+
+.p-img {
 	text-align: center;
 	position: relative;
 	top: -70px;
 }
-img{
+
+img {
 	z-index: 100;
 	border-radius: 50%;
 	width: 170px;
-	height:170px;
+	height: 170px;
 }
-
-
-
 
 @-webkit-keyframes sdb {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  60% {
-    box-shadow: 0 0 0 60px rgba(255, 255, 255, 0.1);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
-}
-@keyframes sdb {
-  0% {
-    opacity: 0;
-  }
-  30% {
-    opacity: 1;
-  }
-  60% {
-    box-shadow: 0 0 0 60px rgba(255, 255, 255, 0.1);
-    opacity: 0;
-  }
-  100% {
-    opacity: 0;
-  }
+	0% {
+		opacity: 0;
+	}
+
+	30% {
+		opacity: 1;
+	}
+
+	60% {
+		box-shadow: 0 0 0 60px rgba(255, 255, 255, 0.1);
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 0;
+	}
 }
 
+@keyframes sdb {
+	0% {
+		opacity: 0;
+	}
+
+	30% {
+		opacity: 1;
+	}
+
+	60% {
+		box-shadow: 0 0 0 60px rgba(255, 255, 255, 0.1);
+		opacity: 0;
+	}
+
+	100% {
+		opacity: 0;
+	}
+}
 
 @-webkit-keyframes rotation {
-		from {
-				-webkit-transform: rotate(0deg);
-		}
-		to {
-				-webkit-transform: rotate(359deg);
-		}
+	from {
+		transform: rotate(0deg);
+	}
+
+	to {
+		transform: rotate(359deg);
+	}
+}
+* {
+	margin: 0;
+	padding: 0;
+	box-sizing: border-box;
+}
+
+@keyframes animate {
+	0% {
+		transform: rotate(0deg);
+	}
+
+	100% {
+		transform: rotate(360deg);
+	}
+}
+
+body {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	min-height: 100vh;
+	/*background: #000;*/
+}
+
+.loader-container {
+	position: relative;
+	width: 100%;
+	height: 200px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	-webkit-box-reflect: below 0 linear-gradient(transparent, transparent, rgba(0, 0, 0, 0.333));
+}
+
+.loader {
+	position: absolute;
+	width: 200px;
+	height: 200px;
+	border-radius: 50%;
+	animation: animate 2s linear infinite;
+}
+
+.loader1:before,
+.loader2:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	background: linear-gradient(to top, transparent, rgba(0, 255, 249, 0.4));
+	background-size: 100px 180px;
+	background-repeat: no-repeat;
+	border-top-left-radius: 100px;
+	border-bottom-left-radius: 100px;
+}
+
+.loader2,
+.loader4 {
+	animation-delay: -1s;
+	filter: hue-rotate(290deg);
+}
+
+.loader i {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 20px;
+	height: 20px;
+	background: #00fff9;
+	border-radius: 50%;
+	z-index: 100;
+	box-shadow: 0 0 10px #00fff9, 0 0 20px #00fff9, 0 0 30px #00fff9, 0 0 40px #00fff9, 0 0 50px #00fff9, 0 0 60px #00fff9, 0 0 70px #00fff9, 0 0 80px #00fff9, 0 0 90px #00fff9, 0 0 100px #00fff9;
+}
+
+.loader span {
+	position: absolute;
+	inset: 20px;
+	background: #000;
+	border-radius: 50%;
+	z-index: 1;
+}
+
+/* Additional styles for loader-container2 */
+.loader-container2 .loader1:before,
+.loader-container2 .loader2:before {
+	content: "";
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 50%;
+	height: 100%;
+	background: linear-gradient(to top, transparent, rgba(250, 169, 158, 0.5));
+	background-size: 100px 180px;
+	background-repeat: no-repeat;
+	border-top-left-radius: 100px;
+	border-bottom-left-radius: 100px;
+}
+
+.loader-container2 .loader2,
+.loader-container2 .loader4 {
+	animation-delay: -1s;
+	filter: hue-rotate(290deg);
+}
+
+.loader-container2 .loader i {
+	position: absolute;
+	top: 0;
+	left: 50%;
+	transform: translateX(-50%);
+	width: 20px;
+	height: 20px;
+	background: #ffa59e;
+	border-radius: 50%;
+	z-index: 100;
+	box-shadow: 0 0 10px #ffb0ab, 0 0 20px #ffb0ab, 0 0 30px #ffb0ab, 0 0 40px #ffb0ab, 0 0 50px #ffb0ab, 0 0 60px #ffb0ab, 0 0 70px #ffb0ab, 0 0 80px #ffb0ab, 0 0 90px #ffb0ab, 0 0 100px #ffb0ab;
+}
+
+.loader-container2 .loader span {
+	position: absolute;
+	inset: 20px;
+	background: #000;
+	border-radius: 50%;
+	z-index: 1;
 }
